[package]
name = "w"
version = "0.1.0"
description = "A minimalist library for MediaWiki APIs"
license = "MIT OR Apache-2.0"
authors = ["Deadbeef <ent3rm4n@gmail.com>"]
keywords = ["MediaWiki", "API"]
categories = ["api-bindings", "authentication"]
edition = "2024"
repository = "https://github.com/fee1-dead/mw"

[dependencies]
reqwest = { version = "0.12.14", features = ["json", "multipart", "gzip", "stream"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = { version = "0.3.21", features = ["io"] }
thiserror = "2.0.12"
pin-project = "1.1.10"
serde_json = "1.0.140"

[features]
default = ["reqwest/cookies"]

[dev-dependencies]
color-eyre = "0.6.4"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.14", features = ["json", "multipart", "gzip", "stream", "rustls-tls"], default-features = false }
